--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "firebase": "8.4.3",
     "history": "^5.0.0",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.2.0",
